--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -51,6 +51,7 @@
       [xScale]="xScale"
       [yScale]="yScale"
       [colors]="colors"
+      [ngStyle]="getStyle(chartTransparency)"
       [series]="results"
       [seriesLine]="lineChart"
       [dims]="dims"
@@ -73,6 +74,7 @@
           [xScale]="xScaleLine"
           [yScale]="yScaleLine"
           [colors]="colorsLine"
+          [ngStyle]="getStyle(lineTransparency)"
           [data]="series"
           [activeEntries]="activeEntries"
           [scaleType]="scaleType"
