feature: style optimize

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1338,12 +1338,12 @@
           </label>
           <br />
         </div>
-        <div *ngIf="chart.options.includes('lineTransparency')">
+        <div *ngIf="chart.options.includes('lineTransparency')" style="display: flex; align-items: center;">
           <label>Line Transparency:</label>
           <input type="range" min="0" max="100" [(ngModel)]="lineTransparency" />
           {{ lineTransparency }}<br /> 
         </div>
-        <div *ngIf="chart.options.includes('chartTransparency')">
+        <div *ngIf="chart.options.includes('chartTransparency')" style="display: flex; align-items: center;">
           <label>Chart Transparency:</label>
           <input type="range" min="0" max="100" [(ngModel)]="chartTransparency" />
           {{ chartTransparency }}<br />
