feat : Add bar transparency into bar chats and add layer choice into combo chart.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -50,6 +51,7 @@
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -87,6 +89,7 @@
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -126,6 +129,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -164,6 +168,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -200,6 +205,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -236,6 +242,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -270,6 +277,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [chartTransparency]="chartTransparency"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -585,6 +593,7 @@
         [yAxis]="showYAxis"
         [lineTransparency]="lineTransparency"
         [chartTransparency]="chartTransparency"
+        [flag]="flag"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -1347,6 +1356,11 @@
           <label>Chart Transparency:</label>
           <input type="range" min="0" max="100" [(ngModel)]="chartTransparency" />
           {{ chartTransparency }}<br />
+        </div>
+        <div *ngIf="chart.options.includes('flag')" style="display: flex; align-items: center;">
+          <label>Line</label>
+          <input  type="range" min="0" max="1" step="1" style="width: 30px;margin-left: 15px;margin-right: 15px;" [(ngModel)]="flag" />
+          <label>Chart</label>
         </div>
         <div *ngIf="chart.options.includes('legendTitle')">
           <label>Legend Title:</label><br />
