--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -953,6 +953,7 @@
       [results]="bubble2d"
       [animations]="animations"
       [showGridLines]="showGridLines"
+      [lineTransparency]="lineTransparency"
       [legend]="showLegend"
       [legendTitle]="legendTitle"
       [legendPosition]="legendPosition"
@@ -1372,6 +1373,11 @@
             Wrap Ticks
           </label>
           <br />
+        </div>
+        <div *ngIf="chart.options.includes('lineTransparency')" style="display: flex; align-items: center;">
+          <label>Line Transparency:</label>
+          <input type="range" min="0" max="100" [(ngModel)]="lineTransparency" />
+          {{ lineTransparency }}<br /> 
         </div>
         <div *ngIf="chart.options.includes('legendTitle')">
           <label>Legend Title:</label><br />
