--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1066,6 +1066,7 @@
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
+        [drawFn]="geoMapDrawFn"
         (dblclick)="dblclick($event)"
         (select)="select($event)"
         (activate)="activate($event)"
