feat: geo-map custom painter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1066,7 +1066,28 @@
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
-        [drawFn]="geoMapDrawFn"
+        (dblclick)="dblclick($event)"
+        (select)="select($event)"
+        (activate)="activate($event)"
+        (deactivate)="deactivate($event)"
+      >
+      </ngx-charts-geo-map>
+      <ngx-charts-geo-map
+        *ngIf="chartType === 'geo-map-custom-draw-fn'"
+        class="chart-container"
+        [view]="view"
+        [scheme]="colorScheme"
+        [results]="geoMapChartData"
+        [animations]="animations"
+        [legend]="false"
+        [legendTitle]="legendTitle"
+        [legendPosition]="legendPosition"
+        [explodeSlices]="explodeSlices"
+        [labels]="showLabels"
+        [gradient]="gradient"
+        [tooltipDisabled]="tooltipDisabled"
+        [tooltipText]="pieTooltipText"
+        [painter]="geoMapPainter"
         (dblclick)="dblclick($event)"
         (select)="select($event)"
         (activate)="activate($event)"
