feat: geo-map custom painter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1073,7 +1073,7 @@
       >
       </ngx-charts-geo-map>
       <ngx-charts-geo-map
-        *ngIf="chartType === 'geo-map-custom-draw-fn'"
+        *ngIf="chartType === 'geo-map-custom-painter'"
         class="chart-container"
         [view]="view"
         [scheme]="colorScheme"
