feat: legend customization

--- a/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
@@ -8,7 +8,7 @@
     overflow: hidden;
     margin-left: 10px;
     margin-bottom: 5px;
-    font-size: 14px;
+    // font-size: 14px;
     font-weight: bold;
   }
 
