--- a/projects/swimlane/ngx-charts/src/lib/gauge/percent-gauge/percent-gauge.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/gauge/percent-gauge/percent-gauge.component.scss
@@ -9,22 +9,26 @@
     stroke: #455066;
   }
 
+  .target-circle {
+    fill: #1b1e27;
+  }
+
   .target-label {
-    font-size: 0.4em;
+    fill: #a0aabe;
   }
+
   .target-value {
-    font-size: 0.5em;
+    fill: #cdd2dd;
   }
+
   .total {
     font-size: 1.1em;
   }
-  .percent {
-    font-size: 0.9em;
-  }
+
   .label {
     display: block;
     font-size: 0.8em;
     text-anchor: middle;
-    dominant-baseline: middle;
+    fill: #cdd2dd;
   }
 }
