--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -804,6 +804,22 @@
         (select)="select($event)"
       >
       </ngx-charts-linear-gauge>
+
+      <ngx-charts-percent-gauge
+        *ngIf="chartType === 'percent-gauge'"
+        class="chart-container"
+        [view]="view"
+        [scheme]="colorScheme"
+        [animations]="animations"
+        [value]="gaugeValue"
+        [target]="target"
+        [max]="gaugeMax"
+        [showLabel]="showLabel"
+        label="Coverage"
+        (select)="select($event)"
+      >
+      </ngx-charts-percent-gauge>
+
       <div *ngIf="chartType === 'plot-demo'">
         <ngx-input
           [type]="inputTypes.text"
@@ -1517,6 +1533,18 @@
           <label>
             <input type="checkbox" [(ngModel)]="margin" />
             Show Margin
+          </label>
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('target')">
+          <label>Target:</label><br />
+          <input type="number" [(ngModel)]="target" /><br />
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('showLabel')">
+          <label>
+            <input type="checkbox" [(ngModel)]="showLabel" />
+            Show Label
           </label>
           <br />
         </div>
