--- a/projects/swimlane/ngx-charts/src/lib/gauge/percent-gauge/percent-gauge.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/gauge/percent-gauge/percent-gauge.component.scss
@@ -9,8 +9,13 @@
     stroke: #455066;
   }
 
-  .target-circle {
+  .target-circle,
+  .target-circle-bg {
     fill: #1b1e27;
+  }
+
+  .target-circle-bg {
+    stroke: #455066;
   }
 
   .target-label {
