refactor: angular control flow blocks
- Upgrade prettier to support angular control flow syntax/formatting.

--- a/projects/swimlane/ngx-charts/src/lib/common/tooltip/tooltip.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/tooltip/tooltip.component.scss
@@ -13,7 +13,9 @@ $popover-spacing: 10px;
 $shadow-key-umbra-opacity: 0.2;
 $shadow-key-penumbra-opacity: 0.14;
 $shadow-ambient-shadow-opacity: 0.12;
-$shadow: 0 1px 3px 0 rgba(0, 0, 0, $shadow-key-umbra-opacity), 0 1px 1px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+$shadow:
+  0 1px 3px 0 rgba(0, 0, 0, $shadow-key-umbra-opacity),
+  0 1px 1px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
   0 2px 1px -1px rgba(0, 0, 0, $shadow-ambient-shadow-opacity);
 
 .ngx-charts-tooltip-content {
@@ -139,7 +141,9 @@ $shadow: 0 1px 3px 0 rgba(0, 0, 0, $shadow-key-umbra-opacity), 0 1px 1px 0 rgba(
 
   &.animate {
     opacity: 1;
-    transition: opacity 0.3s, transform 0.3s;
+    transition:
+      opacity 0.3s,
+      transform 0.3s;
     transform: translate3d(0, 0, 0);
     pointer-events: auto;
   }
