--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,7 +117,9 @@ main {
 
   .sidebar {
     overflow-y: auto;
-    box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14),
+    box-shadow:
+      0 7px 8px -4px rgba(0, 0, 0, 0.2),
+      0 13px 19px 2px rgba(0, 0, 0, 0.14),
       0 5px 24px 4px rgba(0, 0, 0, 0.12);
 
     width: 25%;
